--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "keywords": [
     "magic mirror",
     "module template",
-    "react"
+    "react",
+    "node"
   ],
   "author": "djey47",
   "license": "MIT",
@@ -36,7 +37,8 @@
     "jest:watch:helper": "npx jest -- --config ./tools/test/jest.server.json --watch",
     "jest:watch": "npx jest -- --config ./tools/test/jest.default.json --watch",
     "precommit": "npm run lint",
-    "prepush": "npm run test"
+    "prepush": "npm run test",
+    "upgrade-interactive": "npm-check --update"
   },
   "dependencies": {
     "axios": "^0.18.0",
@@ -62,6 +64,7 @@
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "css-loader": "^2.0.0",
+    "edit-json-file": "^1.2.0",
     "eslint": "^5.10.0",
     "eslint-plugin-flowtype": "^3.2.0",
     "eslint-plugin-react": "^7.11.1",
@@ -70,6 +73,7 @@
     "husky": "^1.2.0",
     "jest": "^23.6.0",
     "node-sass": "^4.11.0",
+    "npm-check": "^5.9.0",
     "react-test-renderer": "^16.6.3",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
