chore(babel): set electron version properly

--- a/.babelrc
+++ b/.babelrc
@@ -5,7 +5,7 @@
       {
         "targets": {
           "chrome": 71,
-          "electron": "current",
+          "electron": 2,
           "node": "current"
         }
       }
