chore(jest): fix jest scripts

--- a/package.json
+++ b/package.json
@@ -32,10 +32,10 @@
     "lint:scripts": "eslint src && npx flow",
     "lint:styles": "stylelint \"src/**/*.scss\"",
     "flow:typings": "npx flow-typed update",
-    "test": "npx jest -- --config ./tools/test/jest.default.json",
-    "jest:watch:module": "npx jest -- --config ./tools/test/jest.client.json --watch",
-    "jest:watch:helper": "npx jest -- --config ./tools/test/jest.server.json --watch",
-    "jest:watch": "npx jest -- --config ./tools/test/jest.default.json --watch",
+    "test": "npx jest --config ./tools/test/jest.default.json",
+    "jest:watch:module": "npx jest --config ./tools/test/jest.client.json --watch",
+    "jest:watch:helper": "npx jest --config ./tools/test/jest.server.json --watch",
+    "jest:watch": "npx jest --config ./tools/test/jest.default.json --watch",
     "precommit": "npm run lint",
     "prepush": "npm run test",
     "upgrade-interactive": "npm-check --update",
