--- a/package.json
+++ b/package.json
@@ -20,10 +20,10 @@
   "homepage": "https://github.com/djey47/MMM-React-Canvas#readme",
   "scripts": {
     "install": "npm run build-prod",
-    "build:module": "webpack --config tools/webpack/webpack.config.module.js",
-    "build:module-prod": "webpack -p --config tools/webpack/webpack.config.module.js",
-    "build:helper": "webpack --config tools/webpack/webpack.config.helper.js",
-    "build:helper-prod": "webpack -p --config tools/webpack/webpack.config.helper.js",
+    "build:module": "webpack --mode=development --config tools/webpack/webpack.config.module.js",
+    "build:module-prod": "webpack --mode=production --config tools/webpack/webpack.config.module.js",
+    "build:helper": "webpack --mode=development --config tools/webpack/webpack.config.helper.js",
+    "build:helper-prod": "webpack --mode=production --config tools/webpack/webpack.config.helper.js",
     "build": "npm run build:module && npm run build:helper",
     "build-prod": "npm run build:module-prod && npm run build:helper-prod",
     "analyze:module": "npm run build:module && npx webpack-bundle-analyzer stats.json .",
@@ -52,18 +52,18 @@
     "xml2js": "^0.4.19"
   },
   "devDependencies": {
+    "@babel/cli": "^7.2.0",
+    "@babel/core": "^7.2.2",
+    "@babel/plugin-proposal-class-properties": "^7.2.1",
+    "@babel/plugin-proposal-object-rest-spread": "^7.2.0",
+    "@babel/plugin-transform-flow-strip-types": "^7.2.0",
+    "@babel/preset-env": "^7.2.0",
+    "@babel/preset-react": "^7.0.0",
     "app-root-dir": "^1.0.2",
-    "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.3",
+    "babel-core": "^7.0.0-bridge.0",
     "babel-eslint": "^10.0.1",
     "babel-jest": "^23.6.0",
     "babel-loader": "^8.0.4",
-    "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
-    "babel-preset-stage-0": "^6.24.1",
     "css-loader": "^2.0.0",
     "edit-json-file": "^1.2.0",
     "eslint": "^5.10.0",
