--- a/package.json
+++ b/package.json
@@ -73,7 +73,7 @@
     "flow-typed": "^2.5.1",
     "husky": "^1.2.0",
     "jest": "^23.6.0",
-    "node-sass": "^4.11.0",
+    "node-sass": "4.14.1",
     "npm-check": "^5.9.0",
     "react-test-renderer": "^16.6.3",
     "sass-loader": "^7.1.0",
